--- a/plugin.xml
+++ b/plugin.xml
@@ -77,8 +77,8 @@
     <asset src="src/browser/manifest.json" target="manifest.json"/>
   </platform>
   <platform name="ios">
-    <config-file parent="aps-environment" target="*/Entitlements-Debug.plist">
-              <string>production</string>
+    <config-file parent="aps-environment" target="*/Entitlements.plist">
+        <string>production</string>
     </config-file>
     <config-file target="config.xml" parent="/*">
       <feature name="PushNotification">
